// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextEditor /> should match <TextEditor /> snapshot 1`] = `
<div
  className="rmx-text-editor __readonly"
>
  <Quill
    modules={
      Object {
        "toolbar": Array [
          Array [
            "bold",
            "italic",
            "underline",
          ],
          Array [
            Object {
              "fontsize": Array [
                "10px",
                "12px",
                "14px",
                "16px",
                "18px",
                "20px",
                "22px",
                "24px",
              ],
            },
          ],
          Array [
            Object {
              "lineheight": Array [
                "1.0",
                "1.2",
                "1.5",
                "1.6",
                "1.8",
                "2.0",
                "2.4",
                "2.8",
                "3.0",
                "4.0",
                "5.0",
              ],
            },
          ],
          Array [
            Object {
              "color": Array [],
            },
            Object {
              "background": Array [],
            },
          ],
          Array [
            Object {
              "font": Array [
                "Roboto",
                "RobotoCondensed",
                "OpenSans",
                "Lato",
                "Montserrat",
                "Oswald",
                "Merriweather",
                "Ubuntu",
                "Lobster",
                "Pacifico",
                "Vollkorn",
                "Cuprum",
                "AlegreyaSans",
                "RussoOne",
                "PlayfairDisplaySC",
                "Alice",
                "PressStart2P",
                "BadScript",
                "YesevaOne",
                "Marmelad",
                "RubikMonoOne",
              ],
            },
          ],
          Array [
            Object {
              "align": Array [],
            },
          ],
          Array [
            "link",
            "clean",
          ],
        ],
      }
    }
    onChange={[Function]}
    readOnly={true}
    theme="snow"
    value="
                <p class=\\"ql-align-center\\">
                    <strong class=\\"ql-size-huge\\" style=\\"color: rgb(255, 255, 255);\\">ARE YOU GOOD AT GEOGRAPHY?</strong>
                </p>"
  />
</div>
`;

exports[`<TextEditor /> should match <TextEditor /> snapshot in readOnly mode 1`] = `
<div
  className="rmx-text-editor "
>
  <Quill
    modules={
      Object {
        "toolbar": Array [
          Array [
            "bold",
            "italic",
            "underline",
          ],
          Array [
            Object {
              "fontsize": Array [
                "10px",
                "12px",
                "14px",
                "16px",
                "18px",
                "20px",
                "22px",
                "24px",
              ],
            },
          ],
          Array [
            Object {
              "lineheight": Array [
                "1.0",
                "1.2",
                "1.5",
                "1.6",
                "1.8",
                "2.0",
                "2.4",
                "2.8",
                "3.0",
                "4.0",
                "5.0",
              ],
            },
          ],
          Array [
            Object {
              "color": Array [],
            },
            Object {
              "background": Array [],
            },
          ],
          Array [
            Object {
              "font": Array [
                "Roboto",
                "RobotoCondensed",
                "OpenSans",
                "Lato",
                "Montserrat",
                "Oswald",
                "Merriweather",
                "Ubuntu",
                "Lobster",
                "Pacifico",
                "Vollkorn",
                "Cuprum",
                "AlegreyaSans",
                "RussoOne",
                "PlayfairDisplaySC",
                "Alice",
                "PressStart2P",
                "BadScript",
                "YesevaOne",
                "Marmelad",
                "RubikMonoOne",
              ],
            },
          ],
          Array [
            Object {
              "align": Array [],
            },
          ],
          Array [
            "link",
            "clean",
          ],
        ],
      }
    }
    onChange={[Function]}
    readOnly={false}
    theme="snow"
    value="
                <p class=\\"ql-align-center\\">
                    <strong class=\\"ql-size-huge\\" style=\\"color: rgb(255, 255, 255);\\">ARE YOU GOOD AT GEOGRAPHY?</strong>
                </p>"
  />
</div>
`;
